k8s_manifests/jenkins/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: jenkins
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: raca-jenkins
      http:
        paths:
          - path: /
            backend:
              serviceName: jenkins
              servicePort: 8080
